@@ -4115,9 +4115,13 @@ int opencl_session_begin (hashcat_ctx_t *hashcat_ctx)
        * kernel compile or load
        */
 
-      size_t *kernel_lengths = (size_t *) hcmalloc (sizeof (size_t));
+      size_t kernel_lengths_buf = 0;
 
-      char **kernel_sources = (char **) hcmalloc (sizeof (char *));
+      size_t *kernel_lengths = &kernel_lengths_buf;
+
+      char *kernel_sources_buf = NULL;
+
+      char **kernel_sources = &kernel_sources_buf;
 
       if (cached == false)
       {
@@ -4200,9 +4204,7 @@ int opencl_session_begin (hashcat_ctx_t *hashcat_ctx)
         if (CL_rc == -1) return -1;
       }
 
-      hcfree (kernel_lengths);
       hcfree (kernel_sources[0]);
-      hcfree (kernel_sources);
     }
 
     /**
@@ -4254,9 +4256,13 @@ int opencl_session_begin (hashcat_ctx_t *hashcat_ctx)
        * kernel compile or load
        */
 
-      size_t *kernel_lengths = (size_t *) hcmalloc (sizeof (size_t));
+      size_t kernel_lengths_buf = 0;
 
-      char **kernel_sources = (char **) hcmalloc (sizeof (char *));
+      size_t *kernel_lengths = &kernel_lengths_buf;
+
+      char *kernel_sources_buf = NULL;
+
+      char **kernel_sources = &kernel_sources_buf;
 
       if (cached == false)
       {
@@ -4339,9 +4345,7 @@ int opencl_session_begin (hashcat_ctx_t *hashcat_ctx)
         if (CL_rc == -1) return -1;
       }
 
-      hcfree (kernel_lengths);
       hcfree (kernel_sources[0]);
-      hcfree (kernel_sources);
     }
 
     // return back to the folder we came from initially (workaround)
