@@ -69,6 +69,7 @@
 - Hardware Monitor: Fixed several memory leaks in case hash-file writing (caused by --remove) failed
 - Mask Increment: Fixed memory leak in case mask_append() fails
 - OpenCL Device Management: Fixed several memory leaks in case initialization of an OpenCL device or platform failed
+- OpenCL Kernel: Move kernel binary buffer from heap to stack memory
 - Outfile Check: Fixed a memory leak for failed outfile reads
 - Rule Engine: Fixed several memory leaks in case loading of rules failed
 - Session Management: Fixed several memory leaks in case profile- or install-folder setup failed
